--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "@donothing/lisp-reader",
   "version": "1.1.1",
-  "description": "",
-  "exports": "./src/index.js",
+  "description": "read lisp expressions for fun and profit",
+  "exports": {
+    ".": {
+      "types": "./src/index.d.ts",
+      "import": "./src/index.js"
+    }
+  },
   "type": "module",
   "scripts": {
     "test": "jest"
   },
+  "types": "./src/index.d.ts",
   "keywords": [],
   "author": "",
   "license": "ISC",
