--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     }
   },
   "type": "module",
+  "files": [
+    "./dist",
+    "README.md"
+  ],
   "scripts": {
     "test": "jest",
     "prepare": "tsc"
